@@ -51,6 +51,7 @@
           'grove_tilt_switch', 'grove_piezo_buzzer',
           'grove_relay', 'grove_temporature_sensor',
           'grove_serial_lcd_print', 'grove_serial_lcd_power',
+          'grove_sound_sensor',
           'controls_if', 'controls_if_if', 'controls_if_elseif', 'controls_if_else', 
           'controls_for',//'controls_whileUntil', 'controls_flow_statements',
           'math_number','math_arithmetic',//'math_modulo',
